[package]
name = "py_input_window"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_input_window"
crate-type = ["cdylib"]

[dependencies]
winit = "0.25.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
